--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -1420,10 +1420,202 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
+      "source": [
+        "# **Preliminary Results**\n",
+        "\n",
+        "1. **Tokenization and Stop Words Removal:** Commencing the analysis, we strategically tokenized both words and sentences within the lyrics, laying the groundwork for a more granular examination of the textual content. To enhance the quality of our analysis, stop words were judiciously eliminated using the 'nltk' library and the 'ENGLISH_STOP_WORDS' set in Python.\n",
+        "\n",
+        "2. **Most Commonly Used Words Analysis**: We **embarked on deciphering the linguistic landscape by identifying the most commonly used words in the lyrics across various artists. Employing the insights gained from tokenization, we generated a visually informative word cloud, offering a snapshot of the prevalent words that characterize the lyrical expressions of each artist.\n",
+        "\n",
+        "3. **Dimensionality Reduction with PCA:** A significant challenge surfaced during the vectorization process, resulting in an overwhelming 57,000+ features (words). In response, we applied Principal Component Analysis (PCA) to effectively reduce dimensionality while retaining key information. Remarkably, the application of PCA allowed us to condense the feature space to 160 components, capturing an impressive 80% of the variance within the dataset.\n",
+        "\n",
+        "4. **Clustering Analysis**: Building upon the reduced feature set derived from PCA, we proceeded to deploy clustering techniques. Opting for a cluster count of 3, we sought to unveil inherent patterns and groupings within the lyrical content. This clustering analysis lays the foundation for categorizing artists based on similarities in their linguistic choices, paving the way for more nuanced insights into the dataset.\n",
+        "\n",
+        "## **Interim Observations:**\n",
+        "The preliminary results showcase a successful initial exploration into the intricate linguistic patterns within the lyrics dataset. By addressing challenges related to dimensionality, tokenization, and stop words, we have set the stage for a more focused and insightful analysis. The combination of word cloud visualizations, dimensionality reduction with PCA, and clustering adds depth to our understanding of artists' linguistic inclinations, setting the groundwork for further exploration and interpretation in subsequent stages of the unsupervised machine learning project.\n",
+        "\n"
+      ],
       "metadata": {
         "id": "ToyWvQHnU465"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 3.1 Sentiment Analysis"
+      ],
+      "metadata": {
+        "id": "D77xaQxCVcQl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import nltk\n",
+        "nltk.download('vader_lexicon')\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "CjodE4ypVi6e"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sid = SentimentIntensityAnalyzer()\n",
+        "\n",
+        "def calculate_sentiment_vader(text):\n",
+        "    sentiment = sid.polarity_scores(text)\n",
+        "    return sentiment\n",
+        "    #Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "v48DpMaOVjtD"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "senti_score = df_cleaned['Lyric'].apply(calculate_sentiment_vader)\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "tGwQXAEOVlxo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_senti = pd.DataFrame(senti_score.tolist(), index=df_cleaned.index)\n",
+        "\n",
+        "df_senti['Artist'] = df_cleaned['Artist']\n",
+        "df_senti\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "Wv3TR2UdVnqs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean_score = df_senti.groupby('Artist').mean()\n",
+        "mean_score\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "tCbQCOmAVq5a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##3.1 Sentiment Analysis of songs at Artist level"
+      ],
+      "metadata": {
+        "id": "_vJ9m3WZVfFf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "overall_sentiment = mean_score['compound'].mean()\n",
+        "fig = px.bar(mean_score, x=mean_score.index, y='compound',\n",
+        "             labels={'compound': 'Mean Compound Score'},\n",
+        "             title='Figure 3.1 Mean Compound Sentiment Score per Artist')\n",
+        "\n",
+        "fig.add_shape(type=\"line\",\n",
+        "              x0=-0.5,\n",
+        "              y0=overall_sentiment,\n",
+        "              x1=len(mean_score.index)-0.5,\n",
+        "              y1=overall_sentiment,\n",
+        "              line=dict(color=\"black\", width=2, dash=\"dot\")\n",
+        "             )\n",
+        "\n",
+        "fig.add_annotation(x=len(mean_score.index)-0.5, y=overall_sentiment,\n",
+        "                   text=f\"Overall Sentiment Score is: {overall_sentiment:.2f}\",\n",
+        "                   font=dict(size=12),\n",
+        "                   showarrow=False,\n",
+        "                   xshift=10,\n",
+        "                   yshift=10\n",
+        "                  )\n",
+        "fig.update_layout(xaxis_tickangle=90)\n",
+        "fig.update_traces(marker=dict(color=['green' if x >= 0 else 'red' for x in mean_score['compound']]))\n",
+        "fig.show()\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "kcb1Ou-tVvwX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "From Figure 3.1 we can observe the following\n",
+        "\n",
+        "**Overall sentiment is positive**: The average sentiment score for all artists is positive, with most scores falling between 0.28. This suggests that the songs by these artists generally have a positive emotional tone.\n",
+        "\n",
+        "**Artist Variation**: While the overall sentiment is positive, there is a variation in sentiment scores between different artists. For example, Taylor Swift, Selena Gomez, and Ed Sheeran have higher average sentiment scores than some other artists on the list.\n",
+        "\n",
+        "**Complete Picture**: It is important to note that sentiment analysis is a simplified way of measuring emotional tone and may not capture the full complexity of the lyrics. For example, a song that is critical of society might have a negative sentiment score, even though the lyrics could be seen as positive in their message."
+      ],
+      "metadata": {
+        "id": "iSgIkEtdV0RT"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ms = mean_score.reset_index()\n",
+        "ms['size_adjusted'] = ms['compound'].abs()\n",
+        "\n",
+        "fig = px.scatter(ms, x='pos', y='neg', color='neu',\n",
+        "                 size='size_adjusted', text='Artist', size_max=30,\n",
+        "                 labels={'compound': 'Compound Score', 'pos': 'Positive Score', 'neg': 'Negative Score'},\n",
+        "                 title='Figure 3.2 Scatterplot of Sentiment Scores per Artist')\n",
+        "\n",
+        "\n",
+        "fig.update_traces(marker=dict(colorscale='Viridis'), selector=dict(type='scatter', mode='markers'))\n",
+        "fig.show()\n",
+        "#Coded by Prudhvi"
+      ],
+      "metadata": {
+        "id": "JjWdYGHrVx1P"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Over all Sentiment** : As observed from previous Figure 3.1, in this Figure 3.2 most of the artists are scattered in the lower right quadrant of the graph, indicating a higher positive sentiment score compared to negative.\n",
+        "\n",
+        "**Neutral Sentiment**: The size of the bubbles, representing neutral sentiment, varies across the graph. This suggests that some artists have a higher proportion of neutral sentiment in their lyrics compared to others."
+      ],
+      "metadata": {
+        "id": "w64EAMt3V5fQ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "u6pSiy_ZV04g"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
