--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -1609,13 +1609,139 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "##3.2 Artist Sentiment over the year"
+      ],
+      "metadata": {
+        "id": "o1_QE0x1Xy6K"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "df_senti.reset_index(inplace=True)\n",
+        "df_senti"
+      ],
       "metadata": {
         "id": "u6pSiy_ZV04g"
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_Rihanna_YoY = df_concat[['Artist','Album','Year', 'Date', 'Lyric']]\n",
+        "df_Rihanna_YoY = df_Rihanna_YoY[df_Rihanna_YoY['Artist'] == 'Rihanna']\n",
+        "\n",
+        "df_Rihanna_YoY['Year'] = df_Rihanna_YoY['Date'].str.slice(0,4)\n",
+        "df_Rihanna_YoY['Lyric'] = df_Rihanna_YoY['Lyric'].astype(str)\n",
+        "\n",
+        "sia = SentimentIntensityAnalyzer()\n",
+        "df_Rihanna_YoY['sentiment'] = df_Rihanna_YoY['Lyric'].apply(lambda x: sia.polarity_scores(x))\n",
+        "\n",
+        "df_Rihanna_YoY['compound'] = df_Rihanna_YoY['sentiment'].apply(lambda x: x['compound'])\n",
+        "\n",
+        "rihanna_sentiment = df_Rihanna_YoY.groupby('Year')['compound'].mean().reset_index()"
+      ],
+      "metadata": {
+        "id": "xLhQNzcvX6dh"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rihanna_sentiment_overall = mean_score['compound'].mean()\n",
+        "rihanna_sentiment['Year'] = pd.to_datetime(rihanna_sentiment['Year'], format='%Y')\n",
+        "\n",
+        "reg_coeff = np.polyfit(rihanna_sentiment.index, rihanna_sentiment['compound'], 1)\n",
+        "reg_line = np.polyval(reg_coeff, rihanna_sentiment.index)\n",
+        "\n",
+        "fig = px.line(rihanna_sentiment, x='Year', y='compound', title='Figure 3.3 Rihanna Lyrics Sentiment Over Time')\n",
+        "\n",
+        "fig.add_trace(go.Scatter(x=rihanna_sentiment['Year'], y=reg_line, mode='lines', name='Regression Line', line=dict(color='red', dash='dash')))\n",
+        "\n",
+        "fig.update_xaxes(title='Year', tickfont=dict(size=12))\n",
+        "fig.update_yaxes(title='Average Sentiment', tickfont=dict(size=12))\n",
+        "fig.update_layout(title_font=dict(size=14))\n",
+        "\n",
+        "fig.show()\n"
+      ],
+      "metadata": {
+        "id": "zzA0GrUfX89R"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Overall, the sentiment of Rihanna's music has been decreasing over time as we can see from Figure 3.3. The line slopes downwards, indicating a negative trend in the compound sentiment score.\n",
+        "\n",
+        "There is some variation in sentiment year-to-year. The line is not perfectly straight, and there are some fluctuations in the sentiment score from year to year. This suggests that there is some variation in the sentiment of her music across different albums or periods of her career."
+      ],
+      "metadata": {
+        "id": "AvPKt78jYkNt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_BTS_YoY = df_concat[['Artist','Album','Year', 'Date', 'Lyric']]\n",
+        "df_BTS_YoY = df_BTS_YoY[df_BTS_YoY['Artist'] == 'BTS (방탄소년단)']\n",
+        "\n",
+        "df_BTS_YoY['Year'] = df_BTS_YoY['Date'].str.slice(0,4)\n",
+        "df_BTS_YoY['Lyric'] = df_BTS_YoY['Lyric'].astype(str)\n",
+        "\n",
+        "sia = SentimentIntensityAnalyzer()\n",
+        "df_BTS_YoY['sentiment'] = df_BTS_YoY['Lyric'].apply(lambda x: sia.polarity_scores(x))\n",
+        "\n",
+        "df_BTS_YoY['compound'] = df_BTS_YoY['sentiment'].apply(lambda x: x['compound'])\n",
+        "\n",
+        "BTS_sentiment = df_BTS_YoY.groupby('Year')['compound'].mean().reset_index()"
+      ],
+      "metadata": {
+        "id": "faZl5XfFYV64"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "bts_sentiment_overall = BTS_sentiment['compound'].mean()\n",
+        "BTS_sentiment['Year'] = pd.to_datetime(BTS_sentiment['Year'], format='%Y')\n",
+        "\n",
+        "reg_coeff_bts = np.polyfit(BTS_sentiment.index, BTS_sentiment['compound'], 1)\n",
+        "reg_line_bts = np.polyval(reg_coeff_bts, BTS_sentiment.index)\n",
+        "\n",
+        "fig_bts = px.line(BTS_sentiment, x='Year', y='compound', title='Figure 3.5 BTS Lyrics Sentiment Over Time')\n",
+        "\n",
+        "fig_bts.add_trace(go.Scatter(x=BTS_sentiment['Year'], y=reg_line_bts, mode='lines', name='Regression Line', line=dict(color='red', dash='dash')))\n",
+        "\n",
+        "fig_bts.update_xaxes(title='Year', tickfont=dict(size=12))\n",
+        "fig_bts.update_yaxes(title='Average Sentiment', tickfont=dict(size=12))\n",
+        "fig_bts.update_layout(title_font=dict(size=14))\n",
+        "\n",
+        "fig_bts.show()\n"
+      ],
+      "metadata": {
+        "id": "CFwDBWaEYYtE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Figure 3.4 is has an interesting trend. As we can see from the trend line, the sentiment score has been decreasing over the time. However we see that the steep fall was during the years 2013-2015 while they started out with extremely high positive score towards the begining of the 2010."
+      ],
+      "metadata": {
+        "id": "rbFzRilcYlHp"
+      }
     }
   ]
 }
