--- a/BA820_G15_Final.ipynb
+++ b/BA820_G15_Final.ipynb
@@ -1742,6 +1742,143 @@
       "metadata": {
         "id": "rbFzRilcYlHp"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "There appears to be a prevailing trend among many artists toward producing melancholic and introspective music. This phenomenon, often referred to as \"[Sad Girl Pop](https://www.grammy.com/news/sad-girl-pop-olivia-rodrigo-billie-eilish-gracie-abrams-mental-health-music-psychology-analysis)\", has garnered significant attention. A study linked here delves into the reasons behind the popularity of this genre, exploring its connections to mental health, music psychology, and the emotional resonance it evokes among listeners."
+      ],
+      "metadata": {
+        "id": "2_nfFG38ZlzN"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#4. Clustering on Sentimental Analysis"
+      ],
+      "metadata": {
+        "id": "d6eOI3EeZwWf"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_senti_clu=df_senti.drop('Artist', axis=1)"
+      ],
+      "metadata": {
+        "id": "rced5iKTZi3c"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sc= StandardScaler()\n",
+        "norm_data = sc.fit_transform(df_senti_clu)\n",
+        "df_senti_clu_norm = pd.DataFrame(norm_data, columns=df_senti_clu.columns)"
+      ],
+      "metadata": {
+        "id": "JPJXPFlxZz0H"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "inertia = []\n",
+        "sum_of_squared_distances = []\n",
+        "\n",
+        "for k in range(1, 12):\n",
+        "    kmeans = KMeans(n_clusters=k,init='random', random_state=42)\n",
+        "    kmeans.fit(df_senti_clu_norm)\n",
+        "    inertia.append(kmeans.inertia_)\n",
+        "    sum_of_squared_distances.append(kmeans.inertia_)\n",
+        "\n",
+        "second_derivative = np.diff(np.diff(sum_of_squared_distances))\n",
+        "elbow_k = np.argmax(second_derivative) + 2\n",
+        "\n",
+        "plt.scatter(elbow_k, sum_of_squared_distances[elbow_k - 1], c='red', label='Elbow Point', s=100)\n",
+        "\n",
+        "plt.plot(range(1, 12), inertia, marker='o')\n",
+        "plt.xlabel('Number of Clusters (k)')\n",
+        "plt.ylabel('Inertia')\n",
+        "plt.title('Figure 4.1 Elbow Method')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "JzEaUHnIZ2f9"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kmeans_res_clu=KMeans(3,init='random').fit(df_senti_clu_norm)"
+      ],
+      "metadata": {
+        "id": "4grmIWWtZ5A6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_senti_clu_norm['labels']=kmeans_res_clu.labels_\n",
+        "df_senti_clu_norm['labels'].value_counts()"
+      ],
+      "metadata": {
+        "id": "wCYGQM6qZ671"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "cluster_colors = {0: 'blue', 1: 'green', 2: 'red'}\n",
+        "df_senti_clu_norm['cluster_color'] = df_senti_clu_norm['labels'].map(cluster_colors)"
+      ],
+      "metadata": {
+        "id": "KK9u9CuvaE77"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig=px.scatter_3d(df_senti_clu_norm, x='neg',y='neu', z='pos', color='cluster_color',symbol='labels',\n",
+        "                  title='Figure 4.2 Sentiment Analysis Clustering',\n",
+        "                  labels={'neg': 'Negative', 'neu': 'Neutral', 'pos': 'Positive', 'cluster_color': 'Cluster'},\n",
+        "                  width=800, height=600)\n",
+        "fig.update_traces(marker=dict(size=5))\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "Yxi2abHwaGwV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fig = px.scatter(df_senti_clu_norm, x='neg', y='pos', color='cluster_color',\n",
+        "                 title='Figure 4.3 Sentiment Analysis Clustering',\n",
+        "                 labels={'neg': 'Negative', 'pos': 'Positive', 'cluster_color': 'Cluster'},\n",
+        "                 width=800, height=600)\n",
+        "fig.show()"
+      ],
+      "metadata": {
+        "id": "yN0TqzUMaZcJ"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
